<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HttpDialogActivity">

    <TextView
        android:id="@+id/lbl_host"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginLeft="8dp"
        android:inputType="text"
        android:text="@string/lbl_host"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHost"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etHost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/hint_server"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etBase"
        app:layout_constraintEnd_toStartOf="@+id/cbIut"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lbl_host"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbIut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="updateDomain"
        android:text="@string/lbl_iut"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHost"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lbl_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lbl_port"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPort"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="3"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etBase"
        app:layout_constraintStart_toEndOf="@+id/lbl_port" />

    <TextView
        android:id="@+id/lblBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lbl_base"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etBase"
        app:layout_constraintStart_toEndOf="@+id/etPort" />

    <EditText
        android:id="@+id/etBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/requestFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblBase"
        app:layout_constraintTop_toBottomOf="@+id/etHost" />

    <fragment
        android:id="@+id/requestFragment"
        android:name="fr.ulille.iut.pizzaland.testrest.android.RequestFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/responseFragment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBase"
        app:layout_constraintVertical_weight="1" />

    <fragment
        android:id="@+id/responseFragment"
        android:name="fr.ulille.iut.pizzaland.testrest.android.ResponseFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestFragment"
        app:layout_constraintVertical_weight="1" />

</android.support.constraint.ConstraintLayout>