<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestFragment">

    <TextView
        android:id="@+id/tvRequete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/heading2_color"
        android:gravity="center"
        android:text="@string/lbl_request"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/spPreset"
        app:layout_constraintEnd_toStartOf="@+id/spPreset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spPreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:background="@color/heading2_color"
        android:entries="@array/preset_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:entries="@array/methods_name"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_path"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/lbl_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/lbl_url"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFullPath"
        app:layout_constraintStart_toEndOf="@+id/spMethod" />

    <TextView
        android:id="@+id/tvFullPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="left"
        android:text="aaaaaaaaaaaaa"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPath"
        app:layout_constraintStart_toEndOf="@+id/lbl_path" />

    <EditText
        android:id="@+id/etPath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFullPath"
        app:layout_constraintTop_toBottomOf="@+id/spPreset" />

    <TextView
        android:id="@+id/bl_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_query"
        app:layout_constraintBaseline_toBaselineOf="@+id/etQuery"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bl_query"
        app:layout_constraintTop_toBottomOf="@+id/etPath" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="doSend"
        android:text="@string/lbl_send"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuery" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_json"
        android:inputType="textMultiLine"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSend" />

</android.support.constraint.ConstraintLayout>